# CRT

./: .gitignore  CMakeLists.txt  compile_commands.json  pocl_notes.md  readme.md  test.ppm
screenshots/: random_spheres.ppm  two_checkered_spheres.ppm
src/: CLUtil.cpp  CLUtil.h  camera.h  cl_buffer.h  cl_def.cl  cl_errors.h  cl_util.cl  common.h  crt.h  dielectric.h  hit_record.h  hittable_list.h  interval.h  lambertian.h  main.c  main.cpp  metal.h  pocl_opencl.h  ppm.h  random.h  ray.h  scene.h  sphere.h  utils.h  vec3.h
src/common/: aabb.h  bvh.h  bvh_node.h  camera.h  common_defs.h  dielectric.h  interval.h  lambertian.h  material_id.h  metal.h  sphere.h  texture.h
src/device/: cl_def.cl  cl_util.cl  hit_record.h  ray.h
src/host/: BVH.h  CLBuffer.h  CLErrors.h  CLKernel.h  CLMath.cpp  CLMath.h  CLUtil.cpp  CLUtil.h  PPM.h  Random.cpp  Random.h  Utils.cpp  Utils.h  builtin_scenes.h
src/kernels/: clear_image_to_color.cl  draw_background.cl  init_rays.cl  intersect_rays.cl  pixelwise_add.cl  pixelwise_divide.cl  scatter_diffuse.cl  test_kernel.cl  test_kernel.clcpp
